LetsEncrypt's SSL.java didn't work with java 11 and java 8 wasn't available on my laptop as easily as 11 wuz