@@ -17,11 +17,11 @@ import java.security.cert.X509Certificate;
 import java.security.interfaces.RSAPrivateKey;
 import java.security.spec.InvalidKeySpecException;
 import java.security.spec.PKCS8EncodedKeySpec;
+import java.util.Base64;
 
 import javax.net.ssl.KeyManager;
 import javax.net.ssl.KeyManagerFactory;
 import javax.net.ssl.SSLContext;
-import javax.xml.bind.DatatypeConverter;
 
 public class SSL { // https://github.com/TooTallNate/Java-WebSocket/wiki/Getting-a-SSLContext-from-different-sources#getting-a-sslcontext-using-a-lets-encrypt-certificate
 	/* steps for future reference because this was a major pain in my fat ass
@@ -45,7 +45,7 @@ public class SSL { // https://github.com/TooTallNate/Java-WebSocket/wiki/Getting
 
 	        byte[] certBytes = parseDERFromPEM(Files.readAllBytes(new File(pathTo + File.separator + "cert.pem").toPath()), "-----BEGIN CERTIFICATE-----", "-----END CERTIFICATE-----");
 	        byte[] keyBytes = parseDERFromPEM(Files.readAllBytes(new File(pathTo + File.separator + "privkey.pem").toPath()), "-----BEGIN PRIVATE KEY-----", "-----END PRIVATE KEY-----");
-
+	        //System.out.println(certBytes + "\n" + (new String(certBytes)));
 	        X509Certificate cert = generateCertificateFromDER(certBytes);
 	        RSAPrivateKey key = generatePrivateKeyFromDER(keyBytes);
 
@@ -70,7 +70,47 @@ public class SSL { // https://github.com/TooTallNate/Java-WebSocket/wiki/Getting
 	    String data = new String(pem);
 	    String[] tokens = data.split(beginDelimiter);
 	    tokens = tokens[1].split(endDelimiter);
-	    return DatatypeConverter.parseBase64Binary(tokens[0]);
+	    
+	    tokens[0] = tokens[0].trim();
+	    
+	    byte[] in = Base64.getEncoder().encode(tokens[0].getBytes());//DatatypeConverter.parseBase64Binary(tokens[0]);
+	    byte[] base = Base64.getDecoder().decode(in);
+	    //System.out.println("tokenAsRaw: " + tokens[0]);
+	   // System.out.println("tokenAsBytes: " + tokens[0].getBytes());
+	    //System.out.println("tokenAsString: " + (new String(tokens[0])));
+	   // System.out.println("tokenAsBase64AsString: " + (new String(base)));
+	    //System.out.println("tokenAsBase64AsBytes: " + base);
+	    //System.out.println(new String(base));
+	   // System.out.println(new String(Base64.getMimeDecoder().decode(tokens[0])));
+	    //System.out.println("tokenAsBase64AsBytes: " + base.getBytes());
+	   	//System.out.println("bp");
+	   	return Base64.getMimeDecoder().decode(tokens[0]);
+	   	
+	   /* try {
+	    	
+	    	//byte[] z = DatatypeConverter.parseBase64Binary("hello world");
+	    	//System.out.println("datatypeconverter: " + z + "\nraw: " + tokens[0].getBytes());
+	    	//byte[] = 
+	    	for(byte b : tokens[0].getBytes()) {
+	    		
+	    	}
+	    	//byte[] t = Base64.getDecoder().decode(tokens[0].getBytes());
+		    //System.out.println("base64: " + t + "\nraw: " + (new String(t)));
+		    
+		   // String nt = new String(t);
+		   // System.out.println(nt);
+		    //System.out.println("\nbase64 decode for aa" + new String(Base64.getDecoder().decode("aa").toString()));
+		    System.out.println("bp");
+	    
+	    }
+	    catch(IllegalArgumentException e) {
+	    	System.err.println(e + " - " + tokens[0]);
+	    	
+	    }*/
+	    
+	    //return new byte[1];
+	    //return DatatypeConverter.parseBase64Binary(tokens[0]);
+	   //return tokens[0].getBytes();
 	}
 
 	protected RSAPrivateKey generatePrivateKeyFromDER(byte[] keyBytes) throws InvalidKeySpecException, NoSuchAlgorithmException {
